@@ -116,6 +116,12 @@ cache.
 
 list of allowed/disallowed release attributes, see above
 
+=item cupt::cache::pin::addendums::but-automatic-upgrades
+
+integer, specifies priority change for versions that come only from sources
+which have both 'not automatic' and 'but automatic upgrades' flags.
+Defaults to 4200.
+
 =item cupt::cache::pin::addendums::downgrade
 
 integer, specifies priority change for versions that are smaller than currently
@@ -134,6 +140,10 @@ values.
 
 integer, specifies priority increase for versions that come only from 'not
 automatic' sources. Defaults to -4000.
+
+If you change the value of this option, you might want to change the value of
+the option L</cupt::cache::pin::addendums::but-automatic-upgrades>
+accordingly.
 
 =item cupt::cache::release-file-expiration::ignore
 
